--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
         ext.kotlin_version = '1.7.0'
 
     }
+    repositories {
+        mavenCentral()
+    }
 
 
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
